# VulkanFramework_Test

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp
include/shaderc/: shaderc.hpp
legacy/: Cursor.cppm  Elem.cppm  Icons.cppm  Icons_Assets.cppm  RegionDrawable.cppm
properties/: .$pipeline.drawio.bkp  pipeline.drawio
properties/resource/assets/: parse_test.txt  test.txt
properties/shader/spv/: test.frag.spv  test.vert.spv
properties/shader/src/: blit.frag  blit.vert  blit_blur.frag  blit_blur.vert  blit_merge.frag  blit_uv.vert  nfaa.frag  ssao.frag  test.frag  test.vert
src/: File.cppm  MainTest.cppm  spec.hpp
src/arc/: Align.cppm  File.cppm
src/arc.impl/: Assets.Dir.cpp  Assets.Graphic.PostProcess.cpp  Assets.Graphic.cpp  Core.Window.Callback.cpp  Effect.cpp  Font.Manager.cpp  Vulkan.Validation.cpp
src/arc.impl/core/: Core.Global.Assets.cpp  Core.Global.UI.cpp  Core.Init.cpp  Core.Window.Callback.cpp
src/arc.impl/ui/: Core.UI.ToolTipInterface.cpp  UI.Cell.cpp  UI.Element.cpp  UI.ElementUniquePtr.cpp  UI.Group.cpp  UI.ImageDisplay.cpp  UI.RegionDrawable.cpp  UI.Scene.cpp  UI.ScrollPanel.cpp  UI.Slider.cpp  UI.Styles.cpp  UI.TextElement.cpp  UI.ToolTipManager.cpp
src/arc.vulkan/: Align.cppm  File.cppm
src/arc.vulkan.impl/: Assets.Dir.cpp  Assets.Graphic.PostProcess.cpp  Assets.Graphic.cpp  Core.Init.cpp  Core.Window.Callback.cpp  Effect.cpp  Vulkan.Validation.cpp
src/arc.vulkan/assets/: Assets.Ctrl.cppm  Assets.Dir.cppm  Assets.Graphic.PostProcess.cppm  Assets.Graphic.cppm
src/arc.vulkan/core/: ApplicationTimer.cppm  Bundle.cppm  Core.Global.Focus.cppm  Core.Global.cppm  Core.Init.cppm  Core.Window.cppm  File.cppm  FilePlain.cppm  FileTree.cppm  Unit.cppm
src/arc.vulkan/glyph/: Font.GlyphToRegion.cppm  Font.TypeSettings.Renderer.cppm  Font.TypeSettings.cppm  Font.cppm
src/arc.vulkan/graphic/: Camera2D.cppm  Color.cppm  Pixmap.cppm
src/arc.vulkan/image/: Pixmap.cppm
src/arc.vulkan/math/: Interpolation.cppm  Math.cppm  Timed.cppm
src/arc/assets/: Assets.Ctrl.cppm  Assets.Fx.cppm  Assets.Graphic.PostProcess.cppm  Assets.Graphic.cppm
src/arc/core/: File.cppm  (+9 more)
src/core/: Core.Init.cppm  Core.Window.Callback.cppm  Core.Window.cppm  Core.cppm  Unit.cppm
src/core.impl/: Core.Window.Callback.cpp
src/ext/: Algorithm.cppm  Allocator2D.cppm  Async.cppm  Concepts.cppm  Encoding.cppm  Event.cppm  GeneralTMP.cppm  Guard.cppm  HeterogeneousLookup.cppm  Json.cppm  JsonIO.cppm  NotifiableTaskQueue.cppm  RuntimeException.cppm  SnapShot.cppm  StackTrace.cppm  StaticReflection.cppm  StringParse.cppm  TimeMark.cppm  Timer.cppm  TransferAdaptor.cppm  TreeStructure.cppm  adapted_attributes.hpp  algo.cppm  allocator_2D.cppm  assume.hpp  atomic_call.cppm  base64.cppm  collection_op.cppm  concepts.cppm  encode.cppm  enum_operator_gen.hpp  event_manager.cppm  ext.cond_atomic.cppm  ext.views.cppm  guard.cppm  handle_warpper.cppm  heterogeneous.cppm  json.cppm  meta_programming.cppm  no_unique_address.hpp  (+6 more)
src/ext.impl/: RuntimeException.cpp  stack_trace.cpp
src/ext.legacy/: Async.cppm  Json.cppm  JsonIO.cppm  Map2D.cppm  NotifiableTaskQueue.cppm  ObjectPool.cppm  RuntimeException.cppm  TreeStructure.cppm
src/game/: Collision.cppm
src/game.impl/: Draw.Universal.cpp  Entity.cpp  World.RealEntity.cpp
src/image/: Image.cppm  Pixmap.cppm
src/math/: Math.cppm  Rand.cppm
src/tim/: ext.timsort.cppm
test/: renderdoc_test_counter.json
(+377 files in other folders)
